# NamelessWindow

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  NOTICE.md  TODO.md  compile_flags.txt
Extra/: imgui_impl_nlswin.cpp  imgui_impl_nlswin.hpp
examples/: CMakeLists.txt  HelloWorld.cpp  Imgui.cpp  TestBed.cpp  demo.cpp  demo.hpp
examples/HelloWindow/: CMakeLists.txt  main.cpp
examples/HelloWindow/MultipleWindows/: main.cpp
examples/HelloWorld/: main.cpp
examples/KeyboardInput/: main.cpp
examples/MouseInput/: main.cpp
examples/MultipleWindows/: main.cpp
examples/MultipleWindowsAndInputs/: main.cpp
include/NamelessWindow/: Cursor.hpp  Event.hpp  EventListener.hpp  EventQueue.hpp  Exceptions.hpp  InputDevice.hpp  Key.hpp  Keyboard.hpp  MasterPointer.hpp  NLSAPI.h  NLSAPI.hpp  Pointer.hpp  RawMouse.hpp  RawPointer.hpp  SubscribableInputDevice.hpp  Test.hpp  Window.hpp  exceptions.hpp
include/NamelessWindow/Events/: Event.hpp  EventBus.hpp  EventDispatcher.hpp  EventListener.hpp  EventQueue.hpp  InputValues.hpp  Key.hpp
include/NamelessWindow/Rendering/: GLContext.hpp
manual_tests/: CMakeLists.txt  Cursor.cpp  MasterKeyboard.cpp  MultipleKeyboards.cpp  RawMouse.cpp  WindowCreation.cpp  WindowEvents.cpp
src/: CMakeLists.txt  EventListener.x11.cpp  EventListener.x11.hpp  EventQueue.x11.cpp  EventQueue.x11.hpp  Keyboard.x11.cpp  Keyboard.x11.hpp  Test.cpp  Window.x11.cpp  Window.x11.hpp  WindowX11.cpp  WindowX11.hpp  XConnection.cpp  XConnection.h
src/Common/: Event.cpp
src/WIN32/: W32BaseMouse.cpp  W32BaseMouse.hpp  W32Cursor.cpp  W32Cursor.hpp  W32DllMain.cpp  W32DllMain.hpp  W32InputDevice.cpp  W32InputDevice.hpp  W32Keyboard.cpp  W32Keyboard.hpp  W32RawMouse.cpp  W32RawMouse.hpp  W32Util.cpp  W32Util.hpp  W32Window.cpp  W32Window.hpp
src/WIN32/Events/: W32EventBus.cpp  W32EventBus.hpp  W32EventListener.cpp  W32EventListener.hpp  W32EventThreadDispatcher.cpp  W32EventThreadDispatcher.hpp
src/WIN32/Rendering/: W32GLContext.cpp  W32GLContext.hpp
src/X11/: EventDispatcher.x11.cpp  EventDispatcher.x11.hpp  EventListener.x11.cpp  EventListener.x11.hpp  EventQueue.x11.cpp  EventQueue.x11.hpp  InputDevice.x11.cpp  InputDevice.x11.hpp  InputMapper.x11.cpp  InputMapper.x11.hpp  KeyMapper.x11.cpp  KeyMapper.x11.hpp  Keyboard.x11.cpp  Keyboard.x11.hpp  MasterPointer.x11.cpp  MasterPointer.x11.hpp  Pointer.x11.cpp  Pointer.x11.hpp  PointerDevice.x11.cpp  PointerDevice.x11.hpp  RawPointer.x11.cpp  RawPointer.x11.hpp  Window.x11.cpp  Window.x11.hpp  X11Cursor.cpp  X11Cursor.hpp  X11EventBus.cpp  X11EventBus.hpp  X11EventListener.cpp  X11EventListener.hpp  X11GenericMouse.cpp  X11GenericMouse.hpp  X11InputDevice.cpp  X11InputDevice.hpp  X11Keyboard.cpp  X11Keyboard.hpp  X11RawInputDevice.cpp  X11RawInputDevice.hpp  X11RawMouse.cpp  X11RawMouse.hpp  (+6 more)
src/X11/Rendering/: X11GLContext.cpp  X11GLContext.hpp
